// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarImage - Snapshot should render AvatarImage with local imageSource correctly 1`] = `
<AvatarBase
  size="32"
  testID="avatar-image"
  variant="Image"
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../app/images/fox.png",
      }
    }
    style={
      Object {
        "borderRadius": 16,
        "height": 32,
        "width": 32,
      }
    }
    testID="avatar-image-image"
  />
</AvatarBase>
`;

exports[`AvatarImage - Snapshot should render AvatarImage with remote imageSource correctly 1`] = `
<AvatarBase
  size="32"
  testID="avatar-image"
  variant="Image"
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "https://cryptologos.cc/logos/curve-dao-token-crv-logo.png",
      }
    }
    style={
      Object {
        "borderRadius": 16,
        "height": 32,
        "width": 32,
      }
    }
    testID="avatar-image-image"
  />
</AvatarBase>
`;
